1999-03-16  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * stream.d (rd_ch_terminal2): Restructure this function. Call
          rd_ch_unbuffered, in order to respect the stream's encoding.
          When EOF has been reached, no need to set strm_rd_ch_last,
          the caller already does this.
          (lisp_completion_matches): Do filename completion also after #P".
          (rd_ch_terminal3): Restructure this function. Respect the stream's
          encoding. When EOF has been reached, no need to set strm_rd_ch_last,
          the caller already does this.

1999-03-15  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * lispbibl.d: Test for `__linux__', not `linux', so that even when
          compiling with "-ansi -pedantic" the incompatible _setjmp/_longjmp
          functions are avoided.

1999-03-15  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        Make it possible again to compile with "gcc -x c++".
        * aclocal.m4 (CL_CC_GCC): Define GCC_X_NONE.
        * intparam.d (main7): Use %lX instead of %X for a `long'.
          (main8): Adapt for C++.

        * configure: Don't configure in readline subdir if compiling
          in C++ mode.

        * utils/modprep.d: Define `inline' to empty when compiling with
          "gcc -ansi -pedantic".
          (String_equalsIgnoreCase): Don't use `isascii', it is not portable.

        * io.d (unicode_attribute, graphic_char_p): Remove the macros. The
          global definition in charstrg.d is sufficient.
          (syntax_table_put): Cast one branch of the conditional expression
          to void, to make this valid C++.

        * stream.d (host_data_fetcher): New type.
          (publish_host_data): Adjust declaration, for increased type safety.

        * charstrg.d (string_search): Change for being valid C++.

        * foreign.d (alignof): Provide alternate definition, valid C++.
          (convert_to_foreign): Cast converter_malloc result to char*.
